update ui in mainwindow inventorywindow addquest morecharacteristics showinfoquest

--- a/Silently/src/AddQuest/addquest.ui
+++ b/Silently/src/AddQuest/addquest.ui
@@ -13,38 +13,32 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color:white;</string>
+  </property>
   <layout class="QGridLayout" name="gridLayout_4">
-   <item row="0" column="0" colspan="2">
-    <widget class="QGroupBox" name="groupBox">
-     <property name="title">
-      <string>Adding new Quest</string>
+   <item row="4" column="0">
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>20</height>
+      </size>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_Title">
-        <property name="text">
-         <string>Title</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1" colspan="2">
-       <widget class="QLineEdit" name="Title"/>
-      </item>
-      <item row="1" column="0" colspan="2">
-       <widget class="QLabel" name="label_Discription">
-        <property name="text">
-         <string>Discription</string>
-        </property>
-       </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QLineEdit" name="Discription"/>
-      </item>
-     </layout>
+     <property name="styleSheet">
+      <string notr="true">background-color:orange;
+border-radius:10px;</string>
+     </property>
+     <property name="text">
+      <string>Set deadline</string>
+     </property>
     </widget>
    </item>
-   <item row="1" column="0" colspan="2">
+   <item row="2" column="0" colspan="2">
     <widget class="QFrame" name="frame">
+     <property name="styleSheet">
+      <string notr="true">border:none;</string>
+     </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
@@ -54,6 +48,9 @@
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="2" column="2">
        <widget class="QRadioButton" name="dead">
+        <property name="styleSheet">
+         <string notr="true">color:black;</string>
+        </property>
         <property name="text">
          <string>dead</string>
         </property>
@@ -61,6 +58,9 @@
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label">
+        <property name="styleSheet">
+         <string notr="true">color:black;</string>
+        </property>
         <property name="text">
          <string>Difficulty</string>
         </property>
@@ -68,6 +68,9 @@
       </item>
       <item row="2" column="1">
        <widget class="QRadioButton" name="meduim">
+        <property name="styleSheet">
+         <string notr="true">color:black;</string>
+        </property>
         <property name="text">
          <string>meduim</string>
         </property>
@@ -75,6 +78,9 @@
       </item>
       <item row="1" column="1">
        <widget class="QRadioButton" name="easy">
+        <property name="styleSheet">
+         <string notr="true">color:black;</string>
+        </property>
         <property name="text">
          <string>easy</string>
         </property>
@@ -82,6 +88,9 @@
       </item>
       <item row="1" column="2">
        <widget class="QRadioButton" name="hard">
+        <property name="styleSheet">
+         <string notr="true">color:black;</string>
+        </property>
         <property name="text">
          <string>hard</string>
         </property>
@@ -90,7 +99,7 @@
      </layout>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="3" column="0">
     <widget class="QFrame" name="frame_2">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
@@ -101,28 +110,125 @@
      <layout class="QGridLayout" name="gridLayout_3">
       <item row="0" column="0">
        <widget class="QLabel" name="label_2">
+        <property name="styleSheet">
+         <string notr="true">color:black;</string>
+        </property>
         <property name="text">
          <string>Set deadline(yy.mm.dd.hh.mm):</string>
         </property>
        </widget>
       </item>
       <item row="1" column="0">
-       <widget class="QDateTimeEdit" name="dateTimeEdit"/>
+       <widget class="QDateTimeEdit" name="dateTimeEdit">
+        <property name="styleSheet">
+         <string notr="true">background-color:white;
+color:black;</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="1" column="0" colspan="2">
+    <widget class="QFrame" name="frame_3">
+     <property name="styleSheet">
+      <string notr="true">border:none;</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::StyledPanel</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Raised</enum>
+     </property>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLabel" name="label_Title">
+        <property name="styleSheet">
+         <string notr="true">color:black;</string>
+        </property>
+        <property name="text">
+         <string>Title</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" colspan="2">
+       <widget class="QLineEdit" name="Title">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color:white;
+border-radius:10px;
+color:black;
+border:3px solid silver;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0" colspan="2">
+       <widget class="QLabel" name="label_Discription">
+        <property name="styleSheet">
+         <string notr="true">color:black;</string>
+        </property>
+        <property name="text">
+         <string>Discription</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QLineEdit" name="Discription">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>20</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color:white;
+border-radius:10px;
+color:black;
+border:3px solid silver;</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+   </item>
+   <item row="4" column="1">
     <widget class="QPushButton" name="pushButton">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color:orange;
+border-radius:10px;</string>
+     </property>
      <property name="text">
       <string>Add Quest</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QPushButton" name="pushButton_2">
+   <item row="0" column="0" colspan="2">
+    <widget class="QLabel" name="label_3">
+     <property name="font">
+      <font>
+       <pointsize>20</pointsize>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color:orange;</string>
+     </property>
      <property name="text">
-      <string>Set deadline</string>
+      <string>Add new Quest</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
    </item>
