--- a/Silently/src/MoreCharacteristics/morecharacteristics.ui
+++ b/Silently/src/MoreCharacteristics/morecharacteristics.ui
@@ -10,12 +10,27 @@
     <height>507</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <pointsize>16</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true">border-radius:12px;
+color:white;
+background-color:rgb(0, 100, 200);</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="8" column="0">
     <widget class="QLabel" name="Force">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Force:</string>
      </property>
@@ -23,6 +38,11 @@
    </item>
    <item row="9" column="0">
     <widget class="QLabel" name="Intelligence">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Intelligence:</string>
      </property>
@@ -30,6 +50,11 @@
    </item>
    <item row="0" column="0">
     <widget class="QLabel" name="Level">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Level:</string>
      </property>
@@ -37,6 +62,11 @@
    </item>
    <item row="7" column="0">
     <widget class="QLabel" name="Dexterity">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Dexterity:</string>
      </property>
@@ -44,6 +74,11 @@
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="Mana">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Mana:</string>
      </property>
@@ -51,6 +86,11 @@
    </item>
    <item row="6" column="0">
     <widget class="QLabel" name="CriticalDamage">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Critical damage:</string>
      </property>
@@ -58,6 +98,11 @@
    </item>
    <item row="10" column="0">
     <widget class="QLabel" name="Luck">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Luck:</string>
      </property>
@@ -65,6 +110,11 @@
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="Health">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Health:</string>
      </property>
@@ -72,6 +122,11 @@
    </item>
    <item row="1" column="0">
     <widget class="QLabel" name="Exp">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Exp:</string>
      </property>
@@ -79,6 +134,11 @@
    </item>
    <item row="5" column="0">
     <widget class="QLabel" name="ChanceOfCriticalDamage">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Chance of critical damage:</string>
      </property>
@@ -86,6 +146,11 @@
    </item>
    <item row="4" column="0">
     <widget class="QLabel" name="Damage">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>Damage:</string>
      </property>
@@ -93,6 +158,11 @@
    </item>
    <item row="0" column="1">
     <widget class="QLabel" name="LevelLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -100,6 +170,11 @@
    </item>
    <item row="1" column="1">
     <widget class="QLabel" name="ExperienceLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -107,6 +182,11 @@
    </item>
    <item row="2" column="1">
     <widget class="QLabel" name="HealthLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -114,6 +194,11 @@
    </item>
    <item row="3" column="1">
     <widget class="QLabel" name="ManaLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -121,6 +206,11 @@
    </item>
    <item row="4" column="1">
     <widget class="QLabel" name="DamgeLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -128,6 +218,11 @@
    </item>
    <item row="5" column="1">
     <widget class="QLabel" name="ChanceLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -135,6 +230,11 @@
    </item>
    <item row="6" column="1">
     <widget class="QLabel" name="CriticalLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -142,6 +242,11 @@
    </item>
    <item row="7" column="1">
     <widget class="QLabel" name="DexterityLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -149,6 +254,11 @@
    </item>
    <item row="8" column="1">
     <widget class="QLabel" name="ForceLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -156,6 +266,11 @@
    </item>
    <item row="9" column="1">
     <widget class="QLabel" name="IntelligenceLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
@@ -163,6 +278,11 @@
    </item>
    <item row="10" column="1">
     <widget class="QLabel" name="LucklLabel">
+     <property name="font">
+      <font>
+       <pointsize>15</pointsize>
+      </font>
+     </property>
      <property name="text">
       <string>TextLabel</string>
      </property>
