--- a/Silently/src/InventoryWindow/inventorywindow.ui
+++ b/Silently/src/InventoryWindow/inventorywindow.ui
@@ -14,7 +14,7 @@
    <string>Dialog</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color:silver;</string>
+   <string notr="true">background-color:white;</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="2" column="0">
@@ -119,7 +119,8 @@ background-color:rgb(0, 150, 255);</string>
         <property name="styleSheet">
          <string notr="true">border-radius:18px;
 background-color:white;
-color:black;</string>
+color:black;
+border:2px solid silver;</string>
         </property>
        </widget>
       </item>
@@ -128,7 +129,7 @@ color:black;</string>
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>20</height>
+          <height>21</height>
          </size>
         </property>
         <property name="styleSheet">
@@ -145,7 +146,7 @@ border-radius:10px;</string>
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>20</height>
+          <height>21</height>
          </size>
         </property>
         <property name="styleSheet">
@@ -202,7 +203,8 @@ border-radius:10px;</string>
         <property name="styleSheet">
          <string notr="true">border-radius:18px;
 background-color:white;
-color:black;</string>
+color:black;
+border:2px solid silver;</string>
         </property>
        </widget>
       </item>
