--- a/Silently/src/mainwindow.ui
+++ b/Silently/src/mainwindow.ui
@@ -358,6 +358,9 @@ border-radius:10px;</string>
           <property name="text">
            <string>Space</string>
           </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
          </widget>
         </item>
         <item row="1" column="0">
@@ -392,7 +395,7 @@ border-radius:15px;</string>
          <x>10</x>
          <y>110</y>
          <width>150</width>
-         <height>371</height>
+         <height>351</height>
         </rect>
        </property>
        <property name="minimumSize">
@@ -405,7 +408,7 @@ border-radius:15px;</string>
         <number>1</number>
        </property>
        <widget class="QWidget" name="page">
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <property name="geometry">
           <rect>
            <x>-10</x>
@@ -590,7 +593,7 @@ border-radius:5px;</string>
         </widget>
        </widget>
        <widget class="QWidget" name="page_2">
-        <widget class="QWidget" name="">
+        <widget class="QWidget" name="layoutWidget">
          <property name="geometry">
           <rect>
            <x>0</x>
