--- a/Silently/src/addTag/addtag.ui
+++ b/Silently/src/addTag/addtag.ui
@@ -7,74 +7,39 @@
     <x>0</x>
     <y>0</y>
     <width>240</width>
-    <height>220</height>
+    <height>320</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <property name="styleSheet">
-   <string notr="true">background-color:white;
-color:black;</string>
-  </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QLabel" name="label_2">
-     <property name="font">
-      <font>
-       <pointsize>20</pointsize>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color:orange;</string>
-     </property>
-     <property name="text">
-      <string>Add tag to note</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Name of tag</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="tagName">
-       <property name="styleSheet">
-        <string notr="true">color:black;
-background-color:white;
-border:2px solid silver;
-border-radius:10px;</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>20</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color:orange;
-border-radius:10px;</string>
-     </property>
-     <property name="text">
-      <string>Add tag</string>
-     </property>
-    </widget>
-   </item>
-  </layout>
+  <widget class="QLineEdit" name="tagName">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>120</y>
+     <width>113</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color:black;
+background-color:white;</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>80</x>
+     <y>220</y>
+     <width>100</width>
+     <height>32</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add tag</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
