--- a/Silently/src/mainwindow.ui
+++ b/Silently/src/mainwindow.ui
@@ -358,9 +358,6 @@ border-radius:10px;</string>
           <property name="text">
            <string>Space</string>
           </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
          </widget>
         </item>
         <item row="1" column="0">
@@ -395,7 +392,7 @@ border-radius:15px;</string>
          <x>10</x>
          <y>110</y>
          <width>150</width>
-         <height>351</height>
+         <height>371</height>
         </rect>
        </property>
        <property name="minimumSize">
@@ -408,7 +405,7 @@ border-radius:15px;</string>
         <number>1</number>
        </property>
        <widget class="QWidget" name="page">
-        <widget class="QWidget" name="layoutWidget">
+        <widget class="QWidget" name="">
          <property name="geometry">
           <rect>
            <x>-10</x>
@@ -593,7 +590,7 @@ border-radius:5px;</string>
         </widget>
        </widget>
        <widget class="QWidget" name="page_2">
-        <widget class="QWidget" name="layoutWidget">
+        <widget class="QWidget" name="">
          <property name="geometry">
           <rect>
            <x>0</x>
